# pathway-MCP-agent

./: .gitignore  README.md  pyproject.toml
src/pathway_agent/: __init__.py  enrichr.py  file_reader.py  server.py  stringdb.py  visualization.py
