[project]
name = "pathway-mcp-agent"
version = "0.1.0"
description = "MCP server for pathway enrichment analysis and gene interaction queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
pathway-agent = "pathway_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pathway_agent"]
